plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

apply plugin: 'application'

group 'fda'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.json:json:20210307'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
}
javafx {
    version = 11
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
}

run {
    mainClassName = 'application.RestaurantApplication'
    applicationDefaultJvmArgs = ["--add-opens", "javafx.base/com.sun.javafx.event=ALL-UNNAMED", "--add-opens", "javafx.graphics/javafx.scene.image=ALL-UNNAMED"]
}

